--- a/kudster/android/app/src/main/AndroidManifest.xml
+++ b/kudster/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.maksewsha.kudster">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="kudster"
         android:name="${applicationName}"
